# teo

./: CMakeLists.txt  README.md
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: Interpreter.hpp
src/: Interpreter.cpp  Main.cpp
